fix label spacing

--- a/src/components/search/_search.scss
+++ b/src/components/search/_search.scss
@@ -6,5 +6,10 @@
 .btn,
 .input {
   margin-left: 0.5rem;
+}
+
+.label,
+.btn,
+.input {
   margin-top: 0.5rem;
 }
